# seine

./: AGENTS.md  CPU_OPTIMIZATION_LOG.md  Cargo.toml  Makefile  NVIDIA_OPTIMIZATION_LOG.md  README.md  build.rs
.github/workflows/: release.yml
docs/: API.md  MINER_FLAGS.md  NVIDIA_5090_TUNING.md
docs/llm/: integration-playbook.md
pow-kernel/: Cargo.toml  README.md
pow-kernel/src/: lib.rs
scripts/: bench_cpu_ab.sh  build_cpu_native.sh  release_tag.sh
src/: api.rs  config.rs  daemon_api.rs  dev_fee.rs  main.rs  pool.rs  types.rs  version.rs
src/backend/: cpu.rs  metal.rs  mod.rs  nvidia.rs  nvidia_kernel.cu
src/backend/cpu/: events.rs  fixed_argon.rs  kernel.rs
src/control_api/: mod.rs
src/miner/: auth.rs  backend_control.rs  backend_executor.rs  bench.rs  hash_poll.rs  hashrate_tracker.rs  mining.rs  mining_pool.rs  mining_tui.rs  mod.rs  round_control.rs  round_driver.rs  runtime.rs  scheduler.rs  solution_cache.rs  stats.rs  submit.rs  template_prefetch.rs  tip.rs  tui.rs  ui.rs  wallet.rs  work_allocator.rs
