[package]
name = "bnminer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
crossbeam-channel = "0.5"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blocknet-pow-spec = { path = "./pow-spec" }
sysinfo = "0.31"

[features]
default = []
nvidia = []

[dev-dependencies]
httpmock = "0.7"
