[package]
name = "seine"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
blake2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ctrlc = "3.4"
crossbeam-channel = "0.5"
core_affinity = "0.8"
cudarc = { version = "0.19.2", default-features = false, features = ["std", "driver", "nvrtc", "fallback-dynamic-loading", "cuda-12080"], optional = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
blocknet-pow-spec = { path = "./pow-spec" }
sysinfo = "0.31"

[features]
default = ["nvidia"]
nvidia = ["dep:cudarc"]

[dev-dependencies]
httpmock = "0.7"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.release-native]
inherits = "release"
